--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ html, body{
 
 }
 
-app{
+.App{
 
   display: flex;
   flex-wrap: wrap;
@@ -29,6 +29,15 @@ app{
   align-items: center;
   justify-content: center;
   margin: 20px;
+  
+  
+
+}
+
+.logo{
+
+  height: 50px;
+  
   
 
 }
