--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,17 @@ html, body{
   
 
 }
+
+.contenedor-principal{
+
+  height: 550px;
+  min-width: 600px;
+  display:flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+
+
+}
